@@ -223,12 +223,12 @@ dependencies {
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: reformLoggingVersion
   implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: reformLoggingVersion
 
-  implementation group: 'com.github.hmcts', name: 'et-data-model', version: '1.0.10'
+  implementation group: 'com.github.hmcts', name: 'et-data-model', version: '1.0.46'
   implementation group: 'com.github.hmcts', name: 'ccd-client', version: '4.8.6'
   implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '2.0.1'
   implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.3'
   implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.17.3-RELEASE'
-  implementation 'org.apache.tika:tika-core:2.4.0'
+  implementation 'org.apache.tika:tika-core:2.4.1'
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
@@ -256,6 +256,8 @@ dependencies {
   testImplementation('org.assertj:assertj-core:3.23.1')
   testImplementation group: 'io.rest-assured', name: 'rest-assured'
   testImplementation group: 'net.javacrumbs.json-unit', name: 'json-unit', version: '2.35.0'
+
+  testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
 
   // Pact Contract Tests
   contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: '4.3.9'
@@ -309,6 +311,12 @@ runAndPublishConsumerPactTests.finalizedBy pactPublish
 
 project.ext {
   pactVersion = getCheckedOutGitCommitHash()
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 pact {
